--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,8 +4,12 @@
         <filter-name>AuthenticationFilter</filter-name>
         <filter-class>filters.AuthenticationFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>AdminFilter</filter-name>
+        <filter-class>filters.AdminFilter</filter-class>
+    </filter>
     <filter-mapping>
-        <filter-name>AuthenticationFilter</filter-name>
+        <filter-name>AdminFilter</filter-name>
         <servlet-name>AdminServlet</servlet-name>
     </filter-mapping>
     <filter-mapping>
